--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,37 @@ body {
     background: lightblue;
 }
 
-h1{
+h1 {
 color:azure;
-margin-left: 20px;
+margin-left: auto;
+padding: 20%
+font-size: medium;
+font-family:Arial, Helvetica, sans-serif
+}
+
+h2 {
+ color:blueviolet;
+ margin:auto;
+ padding: 20%;
+ font-size: medium;
+ font-family:Arial, Helvetica, sans-serif;
+}
+
+.nav ul {
+    display:flex;
+    justify-content: space-between;
+
+}
+
+h3 {
+    color:aqua;
+    margin: auto;
+    padding: 20%;
+    font-size: medium;
+    font-family:Arial, Helvetica, sans-serif
+
+}
+aside {
+    width:auto
+    float-left:auto
 }
