--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,14 @@ h1 {
 color:azure;
 margin-left: auto;
 padding: 20%
-font-size: medium;
-font-family:Arial, Helvetica, sans-serif
+font-size: 150px;
+font-family:Arial, Helvetica, sans-serif,
 }
 
 h2 {
  color:blueviolet;
  margin:auto;
- padding: 20%;
+ padding: 5%;
  font-size: medium;
  font-family:Arial, Helvetica, sans-serif;
 }
@@ -32,7 +32,28 @@ h3 {
     font-family:Arial, Helvetica, sans-serif
 
 }
-aside {
+aside h3 {
     width:auto
-    float-left:auto
+    
 }
+
+section  {
+    flex: 1 1 0;
+    padding-left: 5%
+
+}
+/*  
+div p {
+    display: block;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-decoration:underline;
+    align-items: flex-start;
+}
+  */
+  footer {
+    flex-direction: row;
+    justify-content: space-between;
+    text-decoration: underline;
+    align-items: flex-start;
+  }
