--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ color:azure;
 margin-left: auto;
 padding: auto;
 font-size: 100px;
-font-family:Arial, Helvetica, sans-serif,
+font-family:Arial, Helvetica, sans-serif;
 }
 
 h2 {
@@ -36,10 +36,18 @@ h2 {
 }
 
 article h2 {
-    width: 10%;
-    height: 40px;
+    width: 1px;
+    height: 1px;
 }
+img article h2 {
+    padding: 1px;
+    margin: 1px;
+    justify-content: flex-start;
 
+}
+div .container{
+    align-items: stretch;
+}
 .nav ul {
     display:flex;
     justify-content: space-between;
@@ -50,14 +58,14 @@ article h2 {
 }
 
 nav ul:hover{
-    color:coral
+    color:coral;
 }
 h3 {
     color:aqua;
     margin: auto;
     padding: 20%;
     font-size: medium;
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
 
 }
 /*  
@@ -70,7 +78,7 @@ aside h3 {
  */
 section  {
     flex: 1 1 0;
-    padding-left: 5%
+    padding-left: 5%;
 
 }
 .container {
