--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,13 @@ header {
     justify-content: space-between;
     align-content: flex-end;
     padding: 1%;
-    flex-direction: row;
+    /* flex-direction: row; */
     background-color: cadetblue;
     color:blueviolet;
+    flex-wrap: wrap;
 }
 
-header aside h3 {
-    float: right;
-    padding: 15px;
-    align-items: flex-end;
-}
+
 h1 {
 color:azure;
 margin-left: auto;
@@ -35,8 +32,15 @@ h2 {
  flex-direction: column;
 
 }
+aside {
+    /* float: right; */
+margin-top: 300px;
 
-.article h2 {
+ /* justify-content: last baseline; */
+}
+
+
+article h2 {
     width: 1px;
     height: 1px;
 }
@@ -49,15 +53,18 @@ img article h2 {
 div .container{
     align-items: stretch;
 }
-.nav ul {
-    display:flex;
-    justify-content: space-between;
+nav {
+    display:flex; 
+    /* justify-content: space-between; */
     flex-direction: row;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Arial, Helvetica, sans-serif; */
+    flex-wrap: wrap;
 
 }
-
-nav ul:hover{
+nav a {
+    margin-right: 20px;
+}
+nav :hover{
     color:coral;
 }
 h3 {
@@ -82,8 +89,10 @@ section  {
 
 }
 .content{
+    display: flex;
     flex-direction: row;
     align-content:baseline;
+    flex-wrap: wrap;
 }
 .container {
     position:relative;
@@ -103,4 +112,9 @@ div p {
     align-items: flex-start;
 }
   
- 
+ div .content{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: baseline;
+ }
