--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ align-items: flex-end;
     align-content: stretch;
 
 }
-/* h2 {
+h2 {
  color:blueviolet;
  margin:auto;
  padding: 5%;
@@ -52,7 +52,7 @@ align-items: flex-end;
  font-family:Arial, Helvetica, sans-serif;
  flex-direction: column;
 
-} */
+}
 aside {
     /* float: right; */
 margin-top: 300px;
@@ -131,11 +131,13 @@ section  {
     /* display: flex;
      */
 }
+/* profile image still needs work.  */
 #About  {
    background-image: url("https://i.pinimg.com/originals/f6/f8/93/f6f89358586c1ecf97ef08e2cb726d80.jpg") ;
    width: 75%;
+   padding: 5%;
    background-repeat: no-repeat;
-
+   background-size: cover;
 }
 .container {
     padding: 5%;
@@ -145,6 +147,7 @@ section  {
     float:right;
 
 }
+/* added a . to show this is a class */
 .bottom-left {
     font-size: 20%;
     bottom: 8px;
@@ -157,10 +160,10 @@ section  {
     text-decoration:underline;
     align-items: flex-start;
 } */
-/* .flex-container {
+.flex-container {
 display: flex;
 flex-direction: column;
-} */
+}
 #Surf .Projects{
     width: 95%;
     overflow:hidden;
@@ -174,7 +177,7 @@ flex-direction: column;
     margin: 20px auto;
     padding: 20px auto;
 }
-#Calculator, .Projects{
+#Calculator .Projects{
     width:75%;
     height:50%;
     overflow: auto;
@@ -187,6 +190,12 @@ flex-direction: column;
     margin: 20px auto;
     padding: 20px auto;
 }
+#Run-Buddy .Projects{
+    width: 100%;
+    overflow: auto;
+    margin: 20px auto;
+    padding: 20px auto;
+}
  div .class, .Projects,.content {
     display: flex;
     flex-direction: column;
@@ -194,11 +203,9 @@ flex-direction: column;
     align-content:flex-start;
     justify-content: flex-start;
  }
- 
+ /* added a # sign to signify it is a id */
  #Surf{
     background-image: url("https://cdn.pixabay.com/photo/2016/12/17/14/33/wave-1913559_1280.jpg");
-    /* width: 400px;
-    height: 400px; */
     border-image-outset:0cap;
     background-repeat: no-repeat;
     
